[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "0.12.6"
alloy-contract = "0.12.0"
alloy-dyn-abi = "0.8.25"
alloy-sol-types = "0.8.25"
dotenv = "0.15.0"
ethers = "2.0.14"
eyre = "0.6.12"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
