[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "0.12.6"
alloy-contract = "0.12.0"
alloy-dyn-abi = "0.8.25"
alloy-sol-types = "0.8.25"
dotenv = "0.15.0"
ethers = "2.0.14"
eyre = "0.6.12"
serde_json = "1.0.140"
thiserror = "2.0.12"
redis = {version = "0.25", features = ["aio", "tokio-comp"]}
tokio = { version = "1.44.1", features = ["full"] }
rabbitmq-stream-client = "0.8.0"
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
async-trait = "0.1"
mockall = "0.13.1"
tempfile = "3.19.1"

[dev-dependencies]
mockall = "0.13.1"

